fixed the header border and fixed the alignment of sections one two and three

--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ header {
 header h1 {
 	margin: 0;
 	padding: 38px 0;
+	border-bottom: 3px solid #77a466;
 }
 header h1 span {
 	color: #77a466;
@@ -98,6 +99,8 @@ header nav ul li a{
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
+	width: 100%;
+	padding: 10px 30px;
 }
 
 .main-image {
@@ -127,22 +130,22 @@ header nav ul li a{
 .section-three {
 	width: 100%;
 	border-top: 1px solid #eee;
-	align-items: center;
-	padding: 10px 30px;
+	align-items: left;
+	justify-content:space-around;
 }
 
 .section-one h3 {
-	padding: 10px 30px;
+	padding: 10px 0px;
 }
 
 .section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
+	border-top: 1px solid #eee;
+	border-bottom: 1px solid #eee;
 }
 
 .section-two h3,
 .section-three h3 {
-	padding: 10px 30px;
+	padding: 10px 0px;
 }
 
 .menu {
@@ -150,7 +153,7 @@ header nav ul li a{
 	padding: 0;
 }
 .menu li {
-	padding: 10px 0;
+	padding: 10px 0px;
 	color:#77a466;
 }
 
@@ -158,11 +161,13 @@ header nav ul li a{
 	color: #333;
 	font-size: 1em;
 	line-height: 21px;
+	padding: 10px 0px;
 }
 
 .address {
 	font-size: 1em;
 	line-height: 24px;
+	padding: 10px 0px;
 }
 
 /*The widths are in a percentage!*/
